<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AndroidDashboardDesignActivity!</string>
    <string name="app_name">AndroidDashboardDesign</string>
    <string name="quants">Quantitative</string>
    <string name="language">Language</string>
    <string name="verbal">Verbal And Logical</string>
    <string name="compfun">Computer Fundamentals</string>
    <string name="interview">Interview</string>
    <string name="tutorial">Tutorial</string>
    <string name="puzzles">Brain Teasers</string>
    <string name="allinone">All In One</string>
    <string name="c">C</string>
    <string name="cpp">C++</string>
    <string name="java">Java</string>
    <string name="html">HTML</string>
    <string name="os">Operating System</string>
    <string name="dbms">Database Management System </string>
    <string name="dsa">Data Structures</string>
    <string name="q1">Numbers And Simplification</string>
    <string name="q2">Square Root And Cube Root</string>
    <string name="q4">Problem on Numbers And Ages</string>
    <string name="q5">Percentage</string>
    <string name="q6">Profit And Loss</string>
    <string name="q7">Ratio And Proportion</string>
    <string name="q8">Partnership</string>
    <string name="q10">Time And Work And Distance</string>
    <string name="q11">Problem On Trains,Boats And Streams</string>
    <string name="q12">Simple Interest And Compound Interest</string>
    <string name="q13">Area And Volume</string>
    <string name="q15">Stocks And Shares</string>
    <string name="q16">Permutation And Combination</string>
    <string name="q17">Probability</string>
    <string name="c1">Declaration And Initialization</string>
    <string name="c2">Contol Instructions</string>
    <string name="c3">Expressions</string>
    <string name="c4">Floating Point</string>
    <string name="c5">Functions</string>
    <string name="c6">C Preprocessor</string>
    <string name="c7">Pointers</string>
    <string name="c8">Arrays And Strings</string>
    <string name="c9">Structures, Unions, Enums </string>
    <string name="c10">Input Output</string>
    <string name="c11">Command Line Arguments</string>
    <string name="c12">Bitwise Operator</string>
    <string name="c13">Typedef, Const, Memory Allocation</string>
    <string name="c14">VarArgs, Complicated Declarations</string>
    <string name="cpp1">OOP Concepts </string>
    <string name="cpp2">Constructors And Destructors </string>
    <string name="cpp3">Pointers, Arrays, Constants, Structures </string>
    <string name="cpp4">Functions And Macros </string>
    <string name="cpp5">Operator And Overloading</string>
    <string name="cpp6">Derived Classes, templates and Exception Handling</string>
    <string name="cpp7">Strings and Streams</string>
    <string name="j1">Basics, Control Statements, Operators </string>
    <string name="j2">Classes And Object </string>
    <string name="j3">Input And Output, Arrays, Strings</string>
    <string name="j4">Inheritance, Abstract Classes, Interfaces, Packeges</string>
    <string name="j5">Excception Handling And Assertions</string>
    <string name="j6">Enumerators And Nested Classes</string>
    <string name="j7">Files And Serialization</string>
    <string name="j8">Threads</string>
    <string name="j9">Collections And Generics</string>
    <string name="j10">Formatters</string>
    <string name="v1">Analogy </string>
    <string name="v2">Classification</string>
    <string name="v3">Series Completion</string>
    <string name="v4">Coding And Decoding</string>
    <string name="v5">Blood Relations</string>
    <string name="v6">Logical Sequence And Words</string>
    <string name="v7">Decision Making</string>
    <string name="v8">Data Sufficiency</string>
    <string name="v9">Cause And Effects</string>
    <string name="head">Aptitude Guru</string>
    <string name="p1">Psychometric Topic 1</string>
    <string name="p2">Psychometric Topic 2</string>
    <string name="p3">Psychometric Topic 3</string>
    <string name="p4">Psychometric Topic 4</string>
    <string name="psychometric">Psychometric</string>
    

</resources>