<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 android:background="#F8F8F8"
    android:orientation="vertical" >

    <!-- Include Action Bar -->

    <include
        android:id="@+id/include1"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        layout="@layout/actionbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/include1"
        android:orientation="vertical" 
          android:background="#F8F8F8">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/include1"
            android:layout_toRightOf="@+id/include1" 
              android:background="#F8F8F8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                  android:background="#F8F8F8" >

                <Button
                    android:id="@+id/btn_p1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:background="@drawable/shape"
                    android:text="@string/p1" />

                <Button
                    android:id="@+id/btn_p2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:background="@drawable/shape"
                    android:text="@string/p2" />

                <Button
                    android:id="@+id/btn_p3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:background="@drawable/shape"
                    android:text="@string/p3" />

                <Button
                    android:id="@+id/btn_p4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:background="@drawable/shape"
                    android:text="@string/p4" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</RelativeLayout>